website/i18n/zh-hant/docusaurus-plugin-content-docs/version-2.x/api/misc/eslint-plugin/README.mdx
---
sidebar_position: 1
slug: /api/misc/@docusaurus/eslint-plugin
---

# 📦 eslint-plugin

[ESLint](https://eslint.org/) 是一個靜態分析程式碼的工具，能透過編輯器提示和命令列回報問題或建議最佳實踐。Docusaurus 提供了一個 ESLint 插件來強制執行 Docusaurus 的最佳實踐。

## 安裝

```bash npm2yarn
npm install --save-dev @docusaurus/eslint-plugin
```

## 使用方式

### 推薦配置

在 `.eslintrc` 設定檔的 `extends` 區段加入 `plugin:@docusaurus/recommended`：

```json title=".eslintrc"
{
  "extends": ["plugin:@docusaurus/recommended"]
}
```

這會啟用 `@docusaurus` eslint 插件並使用 `recommended` 配置。下方[支援的規則](#supported-rules)列出了此配置會啟用的規則清單。

### 手動配置

若需要更細緻的控制，您也可以手動啟用插件並直接配置想使用的規則：

```json title=".eslintrc"
{
  "plugins": ["@docusaurus"],
  "rules": {
    "@docusaurus/string-literal-i18n-messages": "error",
    "@docusaurus/no-untranslated-text": "warn"
  }
}
```

## 支援的配置

- 推薦配置：適用於大多數 Docusaurus 網站的推薦規則集，應從此配置擴展。
- 全部規則：啟用**所有**規則。此配置會在次要版本間變動，若想避免意外重大變更則不應使用。

## 支援的規則

| Name | Description | `` |
| --- | --- | --- |
| [`@docusaurus/no-untranslated-text`](./no-untranslated-text.mdx) | Enforce text labels in JSX to be wrapped by translate calls | `` |
| [`@docusaurus/string-literal-i18n-messages`](./string-literal-i18n-messages.mdx) | Enforce translate APIs to be called on plain text labels | ✅ |

✅ = 推薦啟用

## 配置範例

以下是一個配置範例：

```js title=".eslintrc.js"
module.exports = {
  extends: ['plugin:@docusaurus/recommended'],
  rules: {
    '@docusaurus/no-untranslated-text': [
      'warn',
      {ignoredStrings: ['·', '—', '×']},
    ],
  },
};
```